--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -15,13 +15,23 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.7",
     "@types/node": "^18.7.18",
     "@vitejs/plugin-vue": "^3.1.0",
+    "eslint": "^8.23.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-vue": "^9.5.1",
     "less": "^4.1.3",
-    "typescript": "^4.6.4",
+    "typescript": "^4.8.3",
     "unplugin-auto-import": "^0.11.2",
+    "unplugin-icons": "^0.14.10",
     "unplugin-vue-components": "^0.22.7",
     "vite": "^3.1.0",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-inspect": "^0.7.2",
     "vue-tsc": "^0.40.4"
   }
 }
