--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -23,7 +23,7 @@
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-vue": "^9.5.1",
-    "less": "^4.1.3",
+    "sass": "^1.58.3",
     "typescript": "^4.8.3",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.7",
